# edenmodules

./: .gitignore  LICENSE  configure  configure.ac  edenmodules.buildinfo.in  edenmodules.cabal
Control/Parallel/: Eden.hs
Control/Parallel/Eden/: EdenConcHs.hs  Edi.hs  Merge.hs  ParPrim.hs  ParPrimConcHs.hs
test/: ChainDep.hs  SimpleProcess.hs  TestPrimitives.hs
