name:           edenmodules
version:        1.3.0.1
license:        BSD3
license-file:   LICENSE
maintainer:     eden@mathematik.uni-marburg.de
homepage:       http://www.mathematik.uni-marburg.de/~eden
synopsis:       Semi-explicit parallel programming library
description:
    This package provides a library for semi-explicit parallel programming 
    with Eden. Eden extends Haskell with a small set of syntactic constructs 
    for explicit process specification and creation. While providing enough 
    control to implement parallel algorithms efficiently, it frees the 
    programmer from the tedious task of managing low-level details by 
    introducing automatic communication (via head-strict lazy lists), 
    synchronisation, and process handling. 

    The Eden-modules depend on GHC, and should normally use a GHC extension
    to support parallel execution using message passing.
    This modified GHC-Eden compiler is available from
    <http://www.mathematik.uni-marburg.de/~eden>.
    When built using a standard GHC, this package will produce a 
    threaded simulation of Eden. 

    The Eden homepage     <http://www.mathematik.uni-marburg.de/~eden>
    provides more documentation and a tutorial.

category:       Control, Distributed Computing, Eden, Parallelism
build-type:     Configure
cabal-version:  >=1.22

extra-source-files: 
                edenmodules.buildinfo.in,
                configure,
                configure.ac
extra-tmp-files:config.status,
                config.log,
                edenmodules.buildinfo

source-repository head
    type:     git
    location: git://james.mathematik.uni-marburg.de/edenmodules

library
  exposed-modules:
        Control.Parallel.Eden
        Control.Parallel.Eden.ParPrim
        Control.Parallel.Eden.ParPrimConcHs
        Control.Parallel.Eden.EdenConcHs
        Control.Parallel.Eden.Edi
        Control.Parallel.Eden.Merge
  default-extensions: CPP
  default-language: Haskell2010
  build-depends: base       >= 4 && < 5,
                 containers >= 0.3 && < 0.6,
                 deepseq    >= 1.1 && < 1.5,
                 parallel   >= 3.0 && < 4.0


test-suite simpleprocess
  type:              exitcode-stdio-1.0
  main-is:           SimpleProcess.hs
  hs-source-dirs:    test
  default-extensions:CPP
  build-depends:     base >= 4.7,
                     edenmodules
  default-language:  Haskell2010

test-suite chaindep
  type:              exitcode-stdio-1.0
  main-is:           ChainDep.hs
  hs-source-dirs:    test
  default-extensions:CPP
  build-depends:     base >= 4.7,
                     edenmodules == 1.3.0.1
  default-language:  Haskell2010
